Moving loader animation to the middle and fixing it in dark mode #587 #68 #140

--- a/src/frontend/app/ui/gallery/gallery.component.css
+++ b/src/frontend/app/ui/gallery/gallery.component.css
@@ -56,12 +56,18 @@ app-gallery-map {
   display: block;
 }
 
+.spinner-container {
+  position: absolute;
+  top: 50%;
+  max-width: 100%;
+  width: 100%;
+  padding: 0;
+}
 
 .spinner {
-  margin-top: 50px;
   width: 80px;
   height: 80px;
-  background-color: #333;
+  background-color: var(--bs-body-color);
 
   margin-left: auto;
   margin-right: auto;
